--- a/assets/styles/components/_wp-classes.scss
+++ b/assets/styles/components/_wp-classes.scss
@@ -40,3 +40,26 @@
   @extend .sr-only;
   @extend .sr-only-focusable;
 }
+
+// Responsive video
+.entry-content-asset {
+  height: 0;
+  padding-bottom: 56.25%;
+  padding-top: 25px;
+  position: relative;
+
+  iframe {
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+  }
+}
+
+// Responsive images
+.entry-content {
+  img {
+    max-width: 100%;
+  }
+}
