--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -9,6 +9,7 @@
 @import "common/_global";
 @import "components/_buttons";
 @import "components/_comments";
+@import "components/_common";
 @import "components/_forms";
 @import "components/_grid";
 @import "components/_wp-classes";
