--- a/assets/styles/components/_common.scss
+++ b/assets/styles/components/_common.scss
@@ -42,7 +42,7 @@ main{
 // REQUIRES Sage.breakpoint.refreshValue();
 body {
   &:before {
-    content: "base";
+    content: "0";
     display: none;
   }
 }
@@ -50,7 +50,7 @@ body {
 @media (min-width: $screen-xs) {
   body {
     &:before {
-      content: "xs";
+      content: "1";
     }
   }
 }
@@ -58,7 +58,7 @@ body {
 @media (min-width: $screen-sm) {
   body {
     &:before {
-      content: "sm";
+      content: "2";
     }
   }
 }
@@ -66,7 +66,7 @@ body {
 @media (min-width: $screen-md) {
   body {
     &:before {
-      content: "md";
+      content: "3";
     }
   }
 }
@@ -74,7 +74,7 @@ body {
 @media (min-width: $screen-lg) {
   body {
     &:before {
-      content: "lg";
+      content: "4";
     }
   }
 }
