--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -7,6 +7,7 @@
 // endbower
 
 @import "common/_global";
+@import "components/_animation";
 @import "components/_buttons";
 @import "components/_comments";
 @import "components/_common";
