Added optional sticky footer styles.

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -19,3 +19,6 @@
 @import "layouts/_footer";
 @import "layouts/_pages";
 @import "layouts/_posts";
+
+// Uncomment this line to use the sticky footer functionality
+// @import "components/_sticky-footer";
