Added width property to stuck footer to ensure proper display when stuck.

--- a/assets/styles/components/_sticky-footer.scss
+++ b/assets/styles/components/_sticky-footer.scss
@@ -12,6 +12,7 @@ body.has-stuck-footer {
     height: $sticky-footer-height;
     overflow-y: scroll;
     position: fixed;
+    width: 100%;
 
     .hide-when-stuck {
       display: none;
