Corrected magic bullet style to reference proper bullet glyph and primary color.

--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -40,8 +40,8 @@ body{
       position: relative;
 
       &:before {
-        color: $brand-primary-light;
-        content: '\2022';
+        color: $brand-primary;
+        content: '•';
         display: inline-block;
         left: -15px;
         position: absolute;
