--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -1,9 +1,24 @@
 // Glyphicons font path
 $icon-font-path:        "../fonts/";
 
+
 // Grid settings
 $main-sm-columns:       12;
 $sidebar-sm-columns:    4;
 
+
 // Colors
 $brand-primary:         #27ae60;
+
+$body-bg:               #fff;
+$text-color:            #333;
+
+
+// FONTS
+$font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-family-base:        $font-family-sans-serif;
+
+// $font-family-serif:       Georgia, "Times New Roman", Times, serif;
+// $font-family-base:        $font-family-serif;
+
+$font-size-base:          14px;
