--- a/assets/styles/components/_common.scss
+++ b/assets/styles/components/_common.scss
@@ -1,26 +1,34 @@
 // Differently colored bullets from text
-// Differently colored bullets from text
-main{
-  ul {
+%color-bullet{
+  &:not(.gform_fields):not(.gfield_checkbox) {
     padding: 0 0 0 15px;
     list-style-type: none;
     li {
-      line-height: 22px;
+      line-height:0.5em;
       padding: 5px 0 5px 0;
       position: relative;
+      font-size:$font-size-base;
       &:before {
-        content: '\2022';
+        content:"\2022";
         display: inline-block;
         position: absolute;
-        font-size: 20px;
-        line-height: 16px;
+        font-size: 1.3em;
+        line-height: .5em;
         left: -10px;
-        top: 8px;
+        top: 5px;
         color: $brand-primary;
       }
     }
   }
 }
+
+main{
+  // Default to colored list bullets
+  ul{
+    @extend %color-bullet;
+  }
+}
+
 
 
 // Responsive video - common js function dependent on .videoWrapper & sub iframe style
@@ -35,46 +43,5 @@ main{
     left: 0;
     width: 100%;
     height: 100%;
-  }
-}
-
-// FOR RESPONSIVE JS BREAKPOINT READER
-// REQUIRES Sage.breakpoint.refreshValue();
-body {
-  &:before {
-    content: "0";
-    display: none;
-  }
-}
-
-@media (min-width: $screen-xs) {
-  body {
-    &:before {
-      content: "1";
-    }
-  }
-}
-
-@media (min-width: $screen-sm) {
-  body {
-    &:before {
-      content: "2";
-    }
-  }
-}
-
-@media (min-width: $screen-md) {
-  body {
-    &:before {
-      content: "3";
-    }
-  }
-}
-
-@media (min-width: $screen-lg) {
-  body {
-    &:before {
-      content: "4";
-    }
   }
 }
